--- a/index.html
+++ b/index.html
@@ -2051,6 +2051,60 @@
             }
         }
 
+      /* Footer Preferences Styling */
+        .footer-preferences {
+            max-width: 1400px;
+            margin: 2rem auto 0;
+            padding: 1.5rem 0;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
+        .preference-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: var(--gray);
+            font-size: 0.9rem;
+            transition: var(--transition);
+            cursor: pointer;
+        }
+
+        .preference-item:hover {
+            color: var(--primary);
+        }
+
+        .preference-item i {
+            font-size: 1rem;
+            color: var(--primary);
+        }
+
+        .preference-divider {
+            color: rgba(255, 255, 255, 0.2);
+            font-size: 1rem;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 480px) {
+            .footer-preferences {
+                flex-direction: column;
+                gap: 0.8rem;
+                text-align: center;
+            }
+
+            .preference-divider {
+                display: none;
+            }
+
+            .preference-item {
+                justify-content: center;
+            }
+        }
+
         /* Scrollbar */
         .age-verification-modal::-webkit-scrollbar {
             width: 6px;
@@ -2463,6 +2517,22 @@
  -->
       <div class="footer-bottom">
 <!--         <p class="copyright">© 2025 Fetish Zone. All rights reserved.</p> -->
+        <div class="footer-preferences">
+        <div class="preference-item">
+            <i class="fas fa-globe"></i>
+            <span id="userCountry">Loading...</span>
+        </div>
+        <div class="preference-divider">|</div>
+        <div class="preference-item">
+            <i class="fas fa-language"></i>
+            <span id="userLanguage">English (US)</span>
+        </div>
+        <div class="preference-divider">|</div>
+        <div class="preference-item">
+            <i class="fas fa-dollar-sign"></i>
+            <span id="userCurrency">USD</span>
+        </div>
+    </div>
       </div>
     </footer>
 
@@ -3498,6 +3568,99 @@
 
         enterBtn.addEventListener("click", createRipple);
         exitBtn.addEventListener("click", createRipple);
+    </script>
+    <script>
+        // Location, Language & Currency Detection
+        async function detectUserPreferences() {
+            try {
+                // Detect user's location using IP geolocation
+                const response = await fetch('https://ipapi.co/json/');
+                const data = await response.json();
+
+                // Update country
+                const countryElement = document.getElementById('userCountry');
+                if (data.country_name) {
+                    countryElement.textContent = data.country_name;
+                } else {
+                    countryElement.textContent = 'Unknown';
+                }
+
+                // Detect browser language
+                const userLang = navigator.language || navigator.userLanguage;
+                const languageElement = document.getElementById('userLanguage');
+                
+                // Format language display
+                const languageNames = {
+                    'en': 'English',
+                    'en-US': 'English (US)',
+                    'en-GB': 'English (UK)',
+                    'es': 'Español',
+                    'fr': 'Français',
+                    'de': 'Deutsch',
+                    'it': 'Italiano',
+                    'pt': 'Português',
+                    'zh': '中文',
+                    'ja': '日本語',
+                    'ko': '한국어',
+                    'ar': 'العربية',
+                    'ru': 'Русский'
+                };
+
+                languageElement.textContent = languageNames[userLang] || languageNames[userLang.split('-')[0]] || userLang;
+
+                // Update currency based on country
+                const currencyElement = document.getElementById('userCurrency');
+                const currencyMap = {
+                    'US': 'USD',
+                    'CA': 'CAD',
+                    'GB': 'GBP',
+                    'EU': 'EUR',
+                    'AU': 'AUD',
+                    'JP': 'JPY',
+                    'CN': 'CNY',
+                    'IN': 'INR',
+                    'BR': 'BRL',
+                    'MX': 'MXN',
+                    'NG': 'NGN',
+                    'ZA': 'ZAR'
+                };
+
+                const currency = data.currency || currencyMap[data.country_code] || 'USD';
+                currencyElement.textContent = currency;
+
+                // Store preferences in localStorage for future use
+                localStorage.setItem('userPreferences', JSON.stringify({
+                    country: data.country_name,
+                    countryCode: data.country_code,
+                    language: languageElement.textContent,
+                    currency: currency
+                }));
+
+            } catch (error) {
+                console.error('Error detecting user preferences:', error);
+                // Fallback to stored preferences or defaults
+                const stored = localStorage.getItem('userPreferences');
+                if (stored) {
+                    const prefs = JSON.parse(stored);
+                    document.getElementById('userCountry').textContent = prefs.country || 'Unknown';
+                    document.getElementById('userLanguage').textContent = prefs.language || 'English (US)';
+                    document.getElementById('userCurrency').textContent = prefs.currency || 'USD';
+                } else {
+                    document.getElementById('userCountry').textContent = 'Unknown';
+                }
+            }
+        }
+
+        // Call the function when page loads
+        document.addEventListener('DOMContentLoaded', detectUserPreferences);
+
+        // Optional: Add click handlers for preference items (for future customization)
+        document.querySelectorAll('.preference-item').forEach(item => {
+            item.addEventListener('click', function() {
+                // You can add modal or dropdown functionality here
+                console.log('Preference clicked:', this.textContent);
+            });
+        });
     </script>
   </body>
 </html>
